On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	new file:   315758148_716189799840385_17496892218082876_n.jpg
	modified:   index2.html
	new file:   klite.gif
	modified:   style2.css

--- a/style2.css
+++ b/style2.css
@@ -4,6 +4,12 @@ body {
   text-align: center;
 }
 
+.b-img {
+  background-image: url(315758148_716189799840385_17496892218082876_n.jpg);
+  background-size: contain;
+  filter: blur(8px);
+}
+
 h1 {
   margin-top: 10px;
   margin-bottom: 10px;
@@ -38,9 +44,6 @@ button {
 
 @media (max-width: 421px) {
   div {
-    display: flex;
-    flex-direction: column;
-    /* text-align: center; */
     color: blue;
   }
 }
