--- a/style2.css
+++ b/style2.css
@@ -5,9 +5,9 @@ body {
 }
 
 .b-img {
-  /* background-image: url(315758148_716189799840385_17496892218082876_n.jpg);
+  background-image: url(315758148_716189799840385_17496892218082876_n.jpg);
   background-size: contain;
-  filter: blur(8px); */
+  filter: blur(8px);
 }
 
 h1 {
