Changes to be committed: 	new file:   43ec367df63994bc263928369cd09a48b60742043787e59fc2a8d1a30b5fb594_800.jpg 	new file:   7X0hQc.jpg 	modified:   index2.html 	modified:   style2.css

--- a/style2.css
+++ b/style2.css
@@ -5,9 +5,9 @@ body {
 }
 
 .b-img {
-  background-image: url(315758148_716189799840385_17496892218082876_n.jpg);
+  background-image: url(7X0hQc.jpg);
   background-size: contain;
-  filter: blur(8px);
+  color: rgb(244, 247, 255);
 }
 
 h1 {
@@ -43,7 +43,7 @@ button {
 }
 
 @media (max-width: 421px) {
-  div {
+  .b-img {
     color: blue;
   }
 }
